external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-declaration3.js
class X { async function f() { let await } }
